<resources>
    <string name="app_name">Risky Business Museum App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_multi_choice">MultiChoiceActivity</string>
    <string name="title_activity_single_answer">SingleAnswerActivity</string>
    <string name="AncientWorldTitle">Welcome to the Ancient World trail</string>
    <string name="AncientWorldIntro">You will discover ancient Egypt, Greece, Rome and England. Learn about the cultures and important people of past millennia. You may find this exhibit on the third floor.</string>
    <string name="ExploreAncientWorldTitle">Welcome to the Ancient World Explorer trails</string>
    <string name="ExploreAncientWorldIntro">You will explore ancient Egypt, Greece, Rome and England. Learn about the cultures and important people of past millennia. You may find this exhibit on the third floor.</string>
    <string name="AquariumTitle">Welcome to the Aquarium trail</string>
    <string name="AquariumIntro">Learn about the aquatic world</string>
    <string name="ExploreAquariumTitle">Welcome to the Aquarium explorer trail</string>
    <string name="ExploreAquariumIntro">Explore the aquatic world</string>
    <string name="BugsWorldTitle">Welcome to the Bug House trail</string>
    <string name="BugsWorldIntro">Learn about beetles, flies, spiders, scorpions, centipedes and millipedes. There are even live ant and bee colonies! You may find this exhibit on the second floor.</string>
    <string name="ExploreBugsWorldTitle">Welcome to the Bug House explorer trail</string>
    <string name="ExploreBugsWorldIntro">Explore the world of beetles, flies, spiders, scorpions, centipedes and millipedes. You may find this exhibit on the second floor.</string>
    <string name="WorldCulturesTitle">Welcome to the World Cultures trail</string>
    <string name="WorldCulturesIntro">Discover traditions and cultures from around the globe and see objects from the Americas, Africa, Asia and Oceania. We have Samurai armours and swords! You may find this exhibit on the third floor.</string>
    <string name="ExploreWorldCulturesTitle">Welcome to the World Cultures explorer trail</string>
    <string name="ExploreWorldCulturesIntro">Explore traditions and cultures from around the globe and see objects from the Americas, Africa, Asia and Oceania. We have Samurai armours and swords! You may find this exhibit on the third floor.</string>
    <string name="DinosaurTitle">Welcome to the Prehistoric trail!</string>
    <string name="DinosaurIntro">Travel back in time when dinosaurs roamed our planet and explore life-sized replicas of prehistoric predators! You may find this exhibit on the fourth floor.</string>
    <string name="ExploreDinosaurTitle">Welcome to the Prehistoric explorer trail!</string>
    <string name="ExploreDinosaurIntro">Travel back in time when dinosaurs roamed our planet and explore life-sized replicas of prehistoric predators! You may find this exhibit on the fourth floor.</string>
    <string name="SpaceTitle">Welcome to the \'Space and Time\' trail!</string>
    <string name="spaceIntro">Take a journey that is out of this world. The free planetarium will take you on a spectacular trip through the Universe. You may find this exhibit on the fifth floor.</string>
    <string name="ExploreSpaceTitle">Welcome to the \'Space and Time\' explorer trail!</string>
    <string name="ExploreSpaceIntro">Take a journey that is out of this world. The free planetarium will take you on a spectacular trip through the Universe. You may find this exhibit on the fifth floor.</string>
    <string name="WelcomeTitle">Welcome to the Liverpool World Museum!</string>
    <string name="WelcomeTrailInfo">Trail - take on a quiz that will guide you through an exhibit of your choice.</string>
    <string name="WelcomeExplorerTrailInfo">Explorer Trail - tougher than trails, these are not limited to individual galleries and may even take you on a journey of discovery to other local museums!</string>
    <string name="WelcomeQRScannerInfo">Scan any of our QR-codes to get more information.</string>
    <string name="WelcomeMapInfo">A floor plan detailing all our exhibits and their location within the museum.</string>
    <string name="WelcomeMoreInfo">Go here for more information on Liverpool World Museum and for help with using this App.</string>
    <string name="title_activity_language">LanguageActivity</string>
    <string name="ChooseLanguage">Choose your preferred language</string>
    <string name="QRFragmentTitle">QR-Scanner</string>
    <string name="QRFragmentHint">Hint: scan any of our QR-codes to get more information.</string>
    <string name="Skip">Skip</string>
    <string name="Next">Next</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="OK">Okay</string>
    <string name="completed">completed</string>
    <string name="Score">Score:</string>
    <string name="Results">Results</string>
    <string name="Statistics">Statistics</string>
    <string name="Cancel">Cancel</string>
    <string name="Question">Question</string>
    <string name="SkipFragmentText">Are you sure you want to skip this question? You will not get any points!</string>
    <string name="BackToMainFragmentText">Do you want to leave this trail? Your score will be lost and you will return to the main menu.</string>
    <string name="NotOneOfOurQRCodesMessage">This is not one of our QR-codes.</string>
    <string name="WrongAnswer">This is the wrong answer, try again!</string>
    <string name="WrongGuessPart1of2">Wrong answer, you have</string>
    <string name="WrongGuessPart2of2"> guesses left.</string>
    <string name="CorrectGuessPart1of2">Correct! You get</string>
    <string name="CorrectGuessPart2of2">points.</string>
    <string name="TrailName">Trail name:</string>
    <string name="TotalScore">Total Score:</string>
    <string name="Skipped">Skipped</string>
    <string name="YourTotalScore">Your Total Score:</string>
    <string name="Associated">Trails associated with:</string>
    <string name="DefaultHint">Hint: Press the icon above to start scanning QR-Codes.</string>
    <string name="Hint1">Hint: Scan any of our QR-Codes to get additional information.</string>
    <string name="Hint2">Hint: You can select a trail after scanning one of our codes.</string>
    <string name="Hint3">Interested in an exhibit? Try one of our trails and test your knowledge!</string>
    <string name="Hint4">Want to learn more? Try an explorer trail!</string>
    <string name="Hint5">Up for a challenge? An explorer trail might be just your thing!</string>
    <string name="Hint6">If you get stuck on a question just skip it.</string>
    <string name="NoTrails">"Trails not available in Prototype"</string>
    <string name="Congratulations">Congratulations!</string>
    <string name="WellDone">Well done!</string>
    <string name="YourRankIs">Your rank is:</string>
    <string name="Dora">Dora</string>
    <string name="Spelunker">Spelunker</string>
    <string name="IndianaJones">Indiana Jones</string>
    <string name="LaraCroft">Lara Croft</string>
    <string name="NathanDrake">Nathan Drake</string>
    <string name="BenGates">Ben Gates</string>
    <string-array name="ExplorerRanking">
        <item>@string/Dora</item>
        <item>@string/Spelunker</item>
        <item>@string/BenGates</item>
        <item>@string/NathanDrake</item>
        <item>@string/LaraCroft</item>
        <item>@string/IndianaJones</item>
    </string-array>
    <string-array name="Hints">
        <item>@string/DefaultHint</item>
        <item>@string/Hint1</item>
        <item>@string/Hint2</item>
        <item>@string/Hint3</item>
        <item>@string/Hint4</item>
        <item>@string/Hint5</item>
        <item>@string/Hint6</item>
    </string-array>
    <string-array name="BugTrails">
        <item>Creepy Crawly</item>
        <item>Butterflies</item>
        <item>Web Spinners</item>
        <item>Ant colony</item>
        <item>Edo Kingdom</item>
    </string-array>
    <string name="title_activity_data_base_image_test">DataBaseImageTestActivity</string>
    <string-array name="TrailChangeChoices">
        <item> Continue on your current trail</item>
        <item> Leave your current trail and start the trail which this artifact belongs to </item>
        <item> Leave your current trail and enter browser mode </item>
    </string-array>
    <string name="title_activity_trail_result">TrailResultActivity</string>
    <string name="title_activity_browse_qrcodes">BrowseQRCodesActivity</string>
    <string name="LoremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam suscipit a nisi sed venenatis. Quisque auctor, arcu ut viverra hendrerit, risus leo ullamcorper nibh, aliquet viverra mauris ante sed arcu. Suspendisse egestas mi lorem, non dignissim massa pulvinar ut. Proin vulputate eleifend fermentum. Donec odio massa, tempus id quam ac, molestie bibendum leo. Suspendisse id quam mollis, elementum mi eu, aliquet turpis. Maecenas finibus metus in mollis consectetur. Nam non nunc nec est suscipit scelerisque eget vitae ipsum. Aenean ut nisl vel magna pretium pretium. Donec commodo ut neque nec fermentum. Praesent sit amet finibus arcu, et volutpat massa. Mauris turpis sapien, eleifend non libero eu, gravida consectetur augue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel nibh mattis, feugiat nulla id, mollis odio. Suspendisse consectetur sem et erat consectetur tempus.</string>
    <string name="title_activity_picture_qrquestion">PictureQRQuestionActivity</string>
    <string name="title_activity_picture_multi_choice">PictureMultiChoiceActivity</string>
    <string name="title_trail_welcome">Welcome to Trails</string>
    <string name="sub_title_trail_welcome">Would you like a more challenging experience whilst you browse the museum? Why not try our app trails. Trails challenge you with a series of questions that make up a trail through an exhibit. Question types include locating and scanning correct QR codes, answering multiple choice questions, locating items based on an image and multiple choice question images - the clues are all within the artefacts and exhibits</string>
    <string name="instructions_trail">To begin please choose a trail area galleries above and have fun!</string>
    <string name="title_explorer_trail_welcome">Welcome to Explorer Trails</string>
    <string name="sub_title_explorer_trail_welcome">FIX ME! Trails offer you a series of questions that make up a trail through an exhibit. Question types include locating and scanning correct QR codes, answering multiple choice questions, locating items based on an image and multiple choice question images - the clues are all within the artefacts and exhibits</string>
    <string name="instructions_explorer_trail">To begin please choose a trail area from the above options and have fun!</string>
    <string name="trails_intro_title">Welcome to Trails</string>
</resources>