<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="riskybusiness.riskybusinessmuseumapp.root.Activities.TrailResultActivity"
    android:background="@drawable/royal_blue_ipad_wallpaper">


    <TextView
        android:id="@+id/ResultTitle"
        android:text="@string/Results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/White"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/ResultTrailName"
        android:text="@string/TrailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ResultTitle"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/ResultScore"
        android:text="@string/Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:textSize="25sp"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ResultTrailName"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/ResultStatistics"
        android:text="@string/Statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:textSize="25sp"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ResultScore"
        android:layout_marginTop="15dp"  />

    <Button
        android:id="@+id/ResultOkButton"
        android:text="@string/OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="true"/>

</RelativeLayout>
